--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,6 @@
 spring.application.name=testspring
 
-# Dados de conexão com o banco H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
-
-# Configuração do cliente web do banco H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Configuração para mostrar o SQL no console
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-server.port=8081
+# CONFIG DATABASE
+spring.data.mongodb.uri=mongodb://localhost/testspring
+spring.data.mongodb.username=
+spring.data.mongodb.password=
